# MemeGen

./: .env.template  README.md  main.py  pyproject.toml
collector/: channel_collector.py  config.yaml  utils.py
designdoc/: designdoc.md
